--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@master
         with:
-          profile: minimal
+          toolchain: stable
           components: rustfmt, clippy
+          targets: wasm32-unknown-unknown
       - uses: pnpm/action-setup@v2.2.4
       - uses: actions/setup-node@v3
         with:
