--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rustrogue",
   "version": "1.0.0",
+  "packageManager": "pnpm@7.28.0",
   "private": true,
   "scripts": {
     "build": "nr wasm && vite build",
