--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
           toolchain: stable
           components: rustfmt, clippy
           targets: wasm32-unknown-unknown
+      - uses: Swatinem/rust-cache@v2
       - uses: pnpm/action-setup@v2.2.4
       - uses: actions/setup-node@v3
         with:
@@ -32,6 +33,8 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - run: pnpm install
+        shell: bash
+      - run: cargo install wasm-bindgen-cli
         shell: bash
       - run: pnpm run build
         shell: bash
