--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "packageManager": "pnpm@7.28.0",
   "private": true,
   "scripts": {
-    "build": "nr wasm && vite build",
+    "build": "nr wasm && vite build --base /rustrogue/",
     "start": "nr wasm && vite",
     "wasm": "cargo build --release --target wasm32-unknown-unknown && wasm-bindgen target/wasm32-unknown-unknown/release/rustrogue.wasm --out-dir public --no-modules --no-typescript"
   },
